--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: Description!
+title: Градски транспорт - София
+email: valentinnn@example.com
+description: GTSofia
 destination: docs
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: ""
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  valentinnn1
 
 # Build settings
 markdown: kramdown
@@ -41,3 +40,6 @@ exclude:
   - vendor/ruby/
   - docs
   - _assets
+  - gulpfile.js
+  - package.json
+  - package-lock.json
